<!--

    Copyright (c) 2025, NWO-I Centrum Wiskunde & Informatica (CWI)
    All rights reserved.

    Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:

    1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.

    2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.

    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.rascalmpl</groupId>
    <artifactId>rascal-lucene</artifactId>
    <version>0.1.0-RC5-SNAPSHOT</version>
    <packaging>jar</packaging>

    <scm>
        <developerConnection>scm:git:ssh://git@github.com/usethesource/rascal-lucene.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <!-- dependency resolution configuration (usethesource) -->
    <repositories>
        <repository>
            <id>usethesource</id>
            <url>https://releases.usethesource.io/maven/</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>usethesource</id>
            <url>https://releases.usethesource.io/maven/</url>
        </pluginRepository>
    </pluginRepositories>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lucene-version>7.5.0</lucene-version>
        <rascal-version>0.41.0-RC42</rascal-version>
        <rascal-maven-version>0.30.0-RC25</rascal-maven-version>
        <maven.compiler.release>11</maven.compiler.release>
    </properties>

    <licenses>
        <license>
            <name>BSD-2-Clause</name>
            <url>https://opensource.org/license/BSD-2-Clause</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <build>
        <sourceDirectory>src</sourceDirectory>
        <testSourceDirectory>src</testSourceDirectory>
        <resources>
            <resource>
                <directory>src</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                    <exclude>**/*.class</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>.</directory>
                <filtering>false</filtering>
                <includes>
                    <include>META-INF/RASCAL.MF</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <compilerArgument>-parameters</compilerArgument> <!-- make sure parameters are compiled by name into the jar -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.rascalmpl</groupId>
                <artifactId>rascal-maven-plugin</artifactId>
                <version>${rascal-maven-version}</version>
                <configuration>
                    <errorsAsWarnings>false</errorsAsWarnings> <!-- only allowed during intermediate bootstrap cycles -->
                    <bin>${project.build.outputDirectory}</bin>
                    <srcs>
                        <src>${project.basedir}/src</src>
                    </srcs>
                    <issues>|https://github.com/usethesource/rascal-lucene/issues|</issues>
                </configuration>
                <executions>
                    <execution>
                        <id>it-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>it-package</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-cli</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>tutor</goal>
                        </goals>
                        <configuration>
                            <bin>${project.build.outputDirectory}</bin>
                            <license>${project.basedir}/LICENSE.md</license>
                            <sources>|http://github.com/usethesource/rascal/blob/main|</sources>
                            <funding>${project.basedir}/FUNDING</funding>
                            <citation>${project.basedir}/CITATION.md</citation>
                            <issues>|http://github.com/usethesource/rascal/issues|</issues>
                            <srcs>
                                <src>${project.basedir}/src</src>
                            </srcs>
                        </configuration>
                    </execution> 
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                    <execution>
                        <id>test</id>
                        <phase>test</phase>
                        <configuration>
                            <argLine>
                                -ea
                                -Xmx2G
                                -Xss128m
                                -Dfile.encoding=UTF-8
                            </argLine>
                            <includes>
                                <include>**/*Tests.java</include>
                            </includes>
                            <testSourceDirectory>${basedir}/src/</testSourceDirectory>
                        </configuration>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>

            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                    <arguments>-Drascal.compile.skip -Drascal.tutor.skip -DskipTests</arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <!-- check and possible add license header
                    run mvn license:format to automatically update all license headers
                and add missing ones -->
                <version>4.6</version>
                <configuration>
                    <headerDefinitions>
                        <headerDefinition>rascal_style.xml</headerDefinition>
                    </headerDefinitions>
                    <licenseSets>
                        <licenseSet>
                            <header>LICENSE.md</header>
                            <excludes>
                                <exclude>rascal_style.xml</exclude>
                                <exclude>checkstyle.xml</exclude>
                                <exclude>**/README</exclude>
                                <exclude>**/*.tpl</exclude>
                                <exclude>META-INF/**</exclude>
                                <exclude>.editorconfig</exclude>
                                <exclude>CITATION</exclude>
                                <exclude>FUNDING</exclude>
                            </excludes>
                        </licenseSet>
                    </licenseSets>
                    <mapping>
            <java>SLASHSTAR_STYLE</java>
            <rsc>RASCAL_STYLE</rsc>
          </mapping>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.rascalmpl</groupId>
            <artifactId>rascal</artifactId>
            <version>${rascal-version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-core</artifactId>
            <version>${lucene-version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-highlighter</artifactId>
            <version>${lucene-version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-analyzers-common</artifactId>
            <version>${lucene-version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-queryparser</artifactId>
            <version>${lucene-version}</version>
        </dependency>
    </dependencies>
</project>
